changed the theme from green to purple and attached a logo

--- a/templates/layout/footer.jinja2
+++ b/templates/layout/footer.jinja2
@@ -17,8 +17,8 @@
 <div class="footer">
 <div class="container">
 <div class="row">
-<div class="col-lg-3">
-<p class="mb-4"><img src="/static/images/xlogo.png.pagespeed.ic.WY-5IeVnFD.png" alt="Image" class="img-fluid"></p>
+<div class="col-lg-3" style= "height : 100px">
+<p class="mb-4"><img src="/static/images/escetlogo.png" alt="Image" style= "height :100px" class="img-fluid"></p>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nemo minima qui dolor, iusto iure.</p>
 <p><a href="#">Learn More</a></p>
 </div>
