--- a/templates/layout/header.jinja2
+++ b/templates/layout/header.jinja2
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="/static/https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet"
-          href="/sta/A.fonts%2c%2c_icomoon%2c%2c_style.css%2bcss%2c%2c_bootstrap.min.css%2bcss%2c%2c_jquery-ui.css%2bcss%2c%2c_owl.carousel.min.css%2bcss%2c%2c_owl.theme.default.min.css%2bcss%2c%2c_owl.theme.default.min.css%2bcss%2c%2c_jq"/>
-    <link href="/sta/css/A.jquery.mb.YTPlayer.min.css.pagespeed.cf.N2G3N4O1x5.css" media="all" rel="stylesheet"
+          href="/static/A.fonts,,_icomoon,,_style.css+css,,_bootstrap.min.css+css,,_jquery-ui.css+css,,_owl.carousel.min.css+css,,_owl.theme.default.min.css+css,,_owl.theme.default.min.css+css,,_jq"/>
+    <link href="/static/fonts,_icomoon,_style.css+css,_bootstrap.min.css+css,_jquery-ui.css+css,_owl.carousel.min.css+css,_owl.theme.default.min.css+css,_owl.theme.default.min.css+css,_jquery.fancy" media="all" rel="stylesheet"
           type="text/css">
-    <link rel="stylesheet" href="/static/css/A.style.css.pagespeed.cf.SghS18xLJ1.css">
+    <link rel="stylesheet" href="/static/css/A.style.css.pagespeed.cf.SghS18xLJ1_2.css">
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 <div class="site-wrap">
@@ -22,9 +22,9 @@
         </div>
         <div class="site-mobile-menu-body"></div>
     </div>
-    <div class="py-2 bg-light">
-        <div class="container">
-            <div class="row align-items-center">
+    <div class="py-2 {#bg-light#}" style="background-color: #183661 !important">
+        <div class="container"   >
+            <div class="row align-items-center" style="background-color: #183661 !important">
                 <div class="col-lg-9 d-none d-lg-block">
                     <a href="/contact" class="small mr-3"><span class="icon-question-circle-o mr-2"></span> Have a
                         questions?</a>
@@ -43,9 +43,9 @@
     <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
         <div class="container">
             <div class="d-flex align-items-center">
-                <div class="site-logo">
+                <div class="site-logo" style="height: 144px">
                     <a href="index.html" class="d-block">
-                        <img src="/static/images/xlogo.jpg.pagespeed.ic.fRho2_GusO.jpg" alt="Image" class="img-fluid">
+                        <img src="/static/images/escetlogo.png" style="height: 100%" alt="Image" class="img-fluid">
                     </a>
                 </div>
                 <div class="mr-auto">
@@ -60,8 +60,8 @@
                                          <li class="has-children active">
                                 <a href="{{foo}}" class="nav-link text-left"><i class = "icon-{{ info['menu'][foo][0] }}"></i> {{ info['menu'][foo][1]|title }}</a>
                                 <ul class="dropdown">
-                                    {% for menu in info['menu'][2] %}
-                                        <a href="/{{menu}}" class="nav-link text-left black-colour"><i class = "icon-{{ info['menu'][menu][0] }}"></i> {{ info['menu'][menu][2]|title }}</a>
+                                    {% for menu in info['menu'][foo][2] %}
+                                        <a href="/{{menu}}" class="nav-link text-left black-colour"><i class = "icon-{{ menu }}"></i> {{ menu|title }}</a>
                                        {# <li><a href="{{ foo }}">{{ info['menu'][foo][2]|title }}</a></li>#}
                                     {% endfor %}
 
