--- a/templates/layout/header.jinja2
+++ b/templates/layout/header.jinja2
@@ -110,6 +110,20 @@
                     </div>
                 </div>
             </div>
+         {% for hero in info['header'] %}:
+             <div class="intro-section"
+                 style="background-image:url({{ hero[1] }})">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-lg-12 mx-auto text-center" data-aos="fade-up">
+                            <h1>You Can Learn Anything</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+         {% endfor %}
+
         </div>
         <div></div>
     {% else %}
