changed the theme from green to purple and attached a logo

--- a/templates/index1.html
+++ b/templates/index1.html
@@ -325,54 +325,45 @@
                         <a href="#">Read All News</a>
                     </div>
                     <div class="row">
-                        <div class="col-lg-6">
+                        {% for foo in pg['news'] %}
+                            {% if loop.first  %}
+                                <div class="col-lg-6">
                             <div class="post-entry-big">
-                                <a href="news-single.html" class="img-link"><img src="/static/images/xblog_large_1.jpg.pagespeed.ic.i8Gx2Hw_Ng.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="{{foo['url']}}" class="img-link"><img src="{{foo['urlToImage']}}" alt="Image" class="img-fluid"></a>
                                 <div class="post-content">
                                     <div class="post-meta">
-                                        <a href="#">June 6, 2019</a>
+                                        <a href="#">{{foo['publishedAt']}}</a>
                                         <span class="mx-1">/</span>
-                                        <a href="#">Admission</a>, <a href="#">Updates</a>
+                                        <a href="{{foo['url']}}">{{foo['author']|title}}</a>
                                     </div>
-                                    <h3 class="post-heading"><a href="news-single.html">Campus Camping and Learning Session</a></h3>
+                                    <h3 class="post-heading"><a href="news-single.html">{{foo['description']}}</a></h3>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-6">
+
+                         {% elif loop.index>1 and loop.index<5 %}
+                             <div class="col-lg-6">
                             <div class="post-entry-big horizontal d-flex mb-4">
-                                <a href="news-single.html" class="img-link mr-4"><img src="/static/images/xblog_1.jpg.pagespeed.ic.W_YnMVf_Za.jpg" alt="Image" class="img-fluid"></a>
+                                <a href="{{foo['url']}}" class="img-link mr-4"><img src="{{foo['urlToImage']}}" alt="Image" class="img-fluid"></a>
                                 <div class="post-content">
                                     <div class="post-meta">
-                                        <a href="#">June 6, 2019</a>
+                                        <a href="#">{{foo['publishedAt']}}</a>
                                         <span class="mx-1">/</span>
-                                        <a href="#">Admission</a>, <a href="#">Updates</a>
+                                        <a href="{{foo['url']}}">{{foo['author']|title}}</a>
                                     </div>
-                                    <h3 class="post-heading"><a href="news-single.html">Campus Camping and Learning Session</a></h3>
+                                    <h3 class="post-heading"><a href="news-single.html">{{foo['description']}}</a></h3>
                                 </div>
                             </div>
-                            <div class="post-entry-big horizontal d-flex mb-4">
-                                <a href="news-single.html" class="img-link mr-4"><img src="/static/images/xblog_2.jpg.pagespeed.ic.Zqzj4W2tE3.jpg" alt="Image" class="img-fluid"></a>
-                                <div class="post-content">
-                                    <div class="post-meta">
-                                        <a href="#">June 6, 2019</a>
-                                        <span class="mx-1">/</span>
-                                        <a href="#">Admission</a>, <a href="#">Updates</a>
-                                    </div>
-                                    <h3 class="post-heading"><a href="news-single.html">Campus Camping and Learning Session</a></h3>
-                                </div>
-                            </div>
-                            <div class="post-entry-big horizontal d-flex mb-4">
-                                <a href="news-single.html" class="img-link mr-4"><img src="/static/images/xblog_1.jpg.pagespeed.ic.W_YnMVf_Za.jpg" alt="Image" class="img-fluid"></a>
-                                <div class="post-content">
-                                    <div class="post-meta">
-                                        <a href="#">June 6, 2019</a>
-                                        <span class="mx-1">/</span>
-                                        <a href="#">Admission</a>, <a href="#">Updates</a>
-                                    </div>
-                                    <h3 class="post-heading"><a href="news-single.html">Campus Camping and Learning Session</a></h3>
-                                </div>
-                            </div>
+
                         </div>
+                            {% endif %}
+
+                        {% endfor %}
+                        
+                        
+                        
+                       
+
                     </div>
                 </div>
                 <div class="col-lg-3">
