--- a/templates/about.html
+++ b/templates/about.html
@@ -71,71 +71,30 @@ Dolore, amet reprehenderit.</p>
 <div class="row mb-5 justify-content-center text-center">
 <div class="col-lg-4 mb-5">
 <h2 class="section-title-underline mb-5">
-<span>Our Teachers</span>
+<span>weather forcast</span>
 </h2>
 </div>
 </div>
 <div class="row">
-<div class="col-lg-4 col-md-6 mb-5 mb-lg-5">
-<div class="feature-1 border person text-center">
-<img src="/static/images/xperson_1.jpg.pagespeed.ic.ek_oXY_vZr.jpg" alt="Image" class="img-fluid">
+
+    {% for foo in pg['result']['list'] %}
+        {% if loop.index<7 %}
+            <div class="col-lg-4 col-md-6 mb-5 mb-lg-5">
+            <div class="feature-1 border person text-center">
+<img src=" http://openweathermap.org/img/wn/{{foo['weather'][0]['icon']}}@2x.png" alt="Image" class="img-fluid">
 <div class="feature-1-content">
-<h2>Craig Daniel</h2>
-<span class="position mb-3 d-block">Math Teacher</span>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
+<h2>{{foo['weather'][0]['main']}}</h2>
+<span class="position mb-3 d-block">{{foo['weather'][0]['description']}}</span>
+<p>Temp: {{ temp(foo['main']['temp']) }} <br> Max Temp: {{ temp(foo['main']['temp_max'])}} <br> Min Temp: {{ temp(foo['main']['temp_min'])}}</p>
 </div>
-</div>
-</div>
-<div class="col-lg-4 col-md-6 mb-5 mb-lg-5">
-<div class="feature-1 border person text-center">
-<img src="/static/images/xperson_2.jpg.pagespeed.ic.ZhHlp5WpL3.jpg" alt="Image" class="img-fluid">
-<div class="feature-1-content">
-<h2>Taylor Simpson</h2>
-<span class="position mb-3 d-block">Math Teacher</span>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-md-6 mb-5 mb-lg-5">
-<div class="feature-1 border person text-center">
-<img src="/static/images/xperson_3.jpg.pagespeed.ic.riM5PEA8y7.jpg" alt="Image" class="img-fluid">
-<div class="feature-1-content">
-<h2>Jonas Tabble</h2>
-<span class="position mb-3 d-block">Math Teacher</span>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-md-6 mb-5 mb-lg-5">
-<div class="feature-1 border person text-center">
-<img src="/static/images/xperson_4.jpg.pagespeed.ic.R9GIPEe4kr.jpg" alt="Image" class="img-fluid">
-<div class="feature-1-content">
-<h2>Craig Daniel</h2>
-<span class="position mb-3 d-block">Math Teacher</span>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-md-6 mb-5 mb-lg-5">
-<div class="feature-1 border person text-center">
-<img src="/static/images/xperson_2.jpg.pagespeed.ic.ZhHlp5WpL3.jpg" alt="Image" class="img-fluid">
-<div class="feature-1-content">
-<h2>Taylor Simpson</h2>
-<span class="position mb-3 d-block">Math Teacher</span>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
-</div>
-</div>
-</div>
-<div class="col-lg-4 col-md-6 mb-5 mb-lg-5">
-<div class="feature-1 border person text-center">
-<img src="/static/images/xperson_3.jpg.pagespeed.ic.riM5PEA8y7.jpg" alt="Image" class="img-fluid">
-<div class="feature-1-content">
-<h2>Jonas Tabble</h2>
-<span class="position mb-3 d-block">Math Teacher</span>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit morbi hendrerit elit</p>
-</div>
-</div>
-</div>
+</div></div>
+        {% endif %}
+    {% endfor %}
+
+
+
+
+
 </div>
 </div>
 </div>
