did more on flask login....signed in and logout a user also did the login page

--- a/templates/Dashboard/layout.jinja2
+++ b/templates/Dashboard/layout.jinja2
@@ -541,7 +541,7 @@
                                 <div class="profile_info_details">
                                     <a href="/static/dashboard/#">My Profile </a>
                                     <a href="/static/dashboard/#">Settings</a>
-                                    <a href="/static/dashboard/#">Log Out </a>
+                                    <a href="/logout">Log Out </a>
                                 </div>
                             </div>
                         </div>
