done the ajax login and the sweet alert

--- a/templates/layout/footer.jinja2
+++ b/templates/layout/footer.jinja2
@@ -97,6 +97,8 @@ Copyright &copy;<script data-cfasync="false" src="/static/../../cdn-cgi/scripts/
   gtag('config', 'UA-23581568-13');
 </script>
 <script defer src="/static/../../../static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"rayId":"678c46ca8f63c4fc","token":"cd0b4b3a733644fc843ef0b185f98241","version":"2021.7.0","si":10}'></script>
+<script src= "/static/js/sweetalert/dist/sweetalert2.all.min.js"></script>
+<script src= "/static/js/main.js"></script>
 </body>
 
 <!-- Mirrored from preview.colorlib.com/theme/academics/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 03 Aug 2021 02:55:56 GMT -->
